Update 'backend-tests-go-talqrudp' component image to: quay.io/rhtap_qe/backend-tests-go-talqrudp:f0bb62c9b1f3aafbd44752a1ab41aa8c2a042922@sha256:5cb1fa9d6652972bf1c75c8a8821ab8a8ff86abbe1cca724d067e90703699b5b

--- a/components/backend-tests-go-talqrudp/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-talqrudp/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-talqrudp
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-talqrudp:f0bb62c9b1f3aafbd44752a1ab41aa8c2a042922@sha256:5cb1fa9d6652972bf1c75c8a8821ab8a8ff86abbe1cca724d067e90703699b5b
+          name: container-image
